set navbar to fixed position so that scroll bar no longer caused to the navbar item to jump on only certain pages, edit margintops on top of left and right cells

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -2,6 +2,7 @@
     background: #F1F2B5;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #135058, #F1F2B5);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #135058, #F1F2B5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
+    position:fixed
 }
 
 .landing-grid{
@@ -110,3 +111,4 @@ height: 100%
     color: white;
     padding: 2em;
 }
+
